<resources>
    <string name="app_name">IBA</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="president_word">President Word</string>
    <string name="service_products">Services</string>
    <string name="staff">Staff</string>
    <string name="clients">Clients</string>
    <string name="gifts">Gifts</string>
    <string name="help_center_text">Can i help you?</string>

    <string name="last_news_arabic">أخر الأخبار</string>
    <string name="about_us_arabic">معلومات عن الأكاديمية</string>
    <string name="training_arabic">التدريب</string>
    <string name="works_development_arabic">تطوير الأعمال</string>
    <string name="staff_arabic">الموظفين</string>
    <string name="payment_arabic">طرق الدفع</string>
    <string name="library_arabic">المكتبة</string>
    <string name="updates">التحديثات </string>
    <string name="last_news_update">تحديث أخر الأخبار</string>
    <string name="help_center_text_arabic">هل يمكننى مساعدتك</string>

    <!-- Start Activity -->
    <string name="welcome_to_chat">Welcome To Chat</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <!-- Register Activity -->
    <string name="display_name">Display Name</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">الباسورد</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <!-- Login Activity -->
    <string name="login">سجل دخول</string>
    <!-- Chat Home Activity -->
    <string name="log_out">Log Out</string>

    <!-- Home Chat Activity-->
    <string name="requests_fragment">Requests fragment</string>
    <string name="chats_fragment">Chats fragment</string>
    <string name="friends_fragment">Friends fragment</string>

    <!-- Home Chat Activity-->
    <string name="status">Hi there, I\'m using IBA chat</string>

    <!-- HeadOnline Activity -->
    <string name="economy">1- الاقتصاد</string>
    <string name="stock_market">2- البورصة</string>
    <string name="financial_analysis">1.2- التحليل المالي</string>
    <string name="technical_analysis">2.2- التحليل الفني</string>
    <string name="banks">3- البنوك</string>
    <string name="management">4- الإدارة</string>
    <string name="international_certificate">5- الشهادة الدولية</string>
    <string name="marketing">6- التسويق</string>
    <string name="computer_courses">7- كورسات الكمبيوتر</string>
    <string name="languages">8- اللغات</string>

    <!-- Tourism Courses Activity -->
    <string name="cairo_program">1- برنامج القاهرة</string>

    <!-- Update Type Activity -->
    <string-array name="head_or_online_courses">

        <item>الإقتصاد</item>
        <item>التحليل المالي</item>
        <item>التحليل الفني</item>
        <item>البنوك</item>
        <item>الإدارة</item>
        <item>الشهادة الدولية</item>
        <item>التسويق</item>
        <item>كورسات الكمبيوتر</item>
        <item>اللغات</item>

    </string-array>

    <string-array name="tourism_programs">
        <item>القاهرة</item>
    </string-array>

    <string name="choose_course_category">من فضلك إختار فئة الكورس الذى تريد إضافته أو تحديثه :</string>
    <string name="adding_new_course">إضافة كورس جديد</string>
    <string name="update_course">تحديث كورس</string>


    <!-- Works Development Activity -->
    <string name="comp_establish">1- تأسيس الشركات</string>

    <string name="_marketing">2- التسويق</string>
    <string name="marketing_plans">1.2- إعداد الخطط التسويقية</string>
    <string name="initial_plans">2.2- إعداد الخطط الأولية</string>
    <string name="implementation_plans">3.2- إعداد الخطط التنفيذية</string>

    <string name="social_media_sevices">3- خدمات السوشيال ميديا</string>
    <string name="multiple_packages">1.3- باقات متعددة</string>

    <!-- Works Development Activity -->
    <string name="free_books">1- كتب مجانية</string>
    <string name="payed_books">2- كتب مدفوعة</string>
    <string name="library_photos">3- صور</string>
    <string name="library_video">4- فيديوهات</string>

    <!--  Payment Methods Activity -->
    <string name="bank">البنك</string>
    <string name="cairo_bank">بنك القاهرة</string>
    <string name="cairo_bank_no">123456789</string>
    <string name="egypt_bank">بنك مصر</string>
    <string name="egypt_bank_no">123456789</string>
    <string name="vodafone_cash">فودافون كاش</string>
    <string name="vodafone_cash_no1">01013416508</string>
    <string name="vodafone_cash_no2">01003990432</string>
    <string name="western_union">Western union</string>
    <string name="headquarter">بمقر الأكاديمية</string>
    <string name="address">القاهرة-صلاح سالم-عمارات العبور-عمارة رقم 17أ الدور الخامس</string>

    <!-- All Update Activity -->
    <string name="_last_news_update">تحديث أخر الأخبار</string>
    <string name="_library_update">تحديث المكتبة</string>
    <string name="_courses_update">تحديث الكورسات</string>
    <string name="_works_development_update">تحديث تطوير الأعمال</string>
    <string name="_payment_mehtods_update">تحديث طرق الدفع</string>

    <!-- Library Update -->
    <string name="adding_new_book">إضافة كتاب جديد</string>
    <string name="adding_new_image">إضافة صورة جديد</string>
    <string name="update_book">تحديث كتاب</string>
    <string name="update_image">تحديث صورة</string>
    <string name="choose_book">من فضلك إختار الكتاب الذى تريد تحديثه :</string>
    <string name="choose_image">من فضلك إختار كود الصورة الذى تريد تحديثها :</string>

</resources>
