<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_last_news_ic"
            android:title="@string/last_news_arabic" />
        <item
            android:id="@+id/nav_home_about_us_ic"
            android:title="@string/about_us_arabic" />
        <item
            android:id="@+id/nav_home_library_ic"
            android:title="@string/library_arabic" />
        <item
            android:id="@+id/nav_home_training_ic"
            android:title="@string/training_arabic" />
        <item
            android:id="@+id/nav_home_works_development_ic"
            android:title="@string/works_development_arabic" />
        <item
            android:id="@+id/nav_home_payment_methods_ic"
            android:title="@string/payment_arabic" />

        <item
            android:id="@+id/nav_home_update_ic"
            android:title="@string/updates" />


    </group>
</menu>