<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_student_last_news_ic"
            android:title="@string/last_news_arabic" />
        <item
            android:id="@+id/nav_home_student_about_us_ic"
            android:title="@string/about_us_arabic" />
        <item
            android:id="@+id/nav_home_student_library_ic"
            android:title="@string/library_arabic" />
        <item
            android:id="@+id/nav_home_student_training_ic"
            android:title="@string/training_arabic" />
        <item
            android:id="@+id/nav_home_student_works_development_ic"
            android:title="@string/works_development_arabic" />
        
        <item
            android:id="@+id/nav_home_student_payment_methods_ic"
            android:title="@string/payment_arabic" />
    </group>
</menu>