<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".training.HeadOrOnlineTrainingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <include
            android:id="@+id/head_online_toolbar"
            layout="@layout/app_bar_layout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            //Economy Button
            <Button
                android:id="@+id/head_online_econonmy_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/economy"/>

            //Stock Market Button
            <Button
                android:id="@+id/head_online_stock_market_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/stock_market"/>

            <LinearLayout
                android:id="@+id/head_online_stock_market_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:visibility="gone">

                //Economy Button
                <Button
                    android:id="@+id/head_online_financial_analysis_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right|center_vertical"
                    android:textAlignment="gravity"
                    android:text="@string/financial_analysis"/>

                //Economy Button
                <Button
                    android:id="@+id/head_online_technical_analysis_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right|center_vertical"
                    android:textAlignment="gravity"
                    android:text="@string/technical_analysis"/>

            </LinearLayout>

            //Banks Button
            <Button
                android:id="@+id/head_online_banks_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/banks"/>

            //Management Button
            <Button
                android:id="@+id/head_online_management_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/management"/>

            //International Certificate Button
            <Button
                android:id="@+id/head_online_international_certifiacte_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/international_certificate"/>

            //Marketing Button
            <Button
                android:id="@+id/head_online_marketing_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/marketing"/>

            //Computer Courses Button
            <Button
                android:id="@+id/head_online_computer_courses_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/computer_courses"/>

            //Languages Button
            <Button
                android:id="@+id/head_online_languages_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/languages"/>



        </LinearLayout>


    </LinearLayout>

</ScrollView>