<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".library.LibraryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <include
            android:id="@+id/library_toolbar"
            layout="@layout/app_bar_layout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            //Free Books
            <Button
                android:id="@+id/library_free_books_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/free_books"/>

            //Payed Books
            <Button
                android:id="@+id/library_payed_books_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/payed_books"/>

            //Images
            <Button
                android:id="@+id/library_images_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/library_photos"/>

            //video
            <Button
                android:id="@+id/library_video_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/library_video"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>