<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllUpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <include
            android:id="@+id/all_update_toolbar"
            layout="@layout/app_bar_layout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            //Last News Update
            <Button
                android:id="@+id/all_update_last_news_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/_last_news_update"/>

            //Library Update
            <Button
                android:id="@+id/all_update_library_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/_library_update"/>

            //Courses Update
            <Button
                android:id="@+id/all_update_courses_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/_courses_update"/>

            //Works Development Update
            <Button
                android:id="@+id/all_update_works_development_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAlignment="gravity"
                android:text="@string/_works_development_update"/>

            //Payment Methods Update
            <!--<Button-->
                <!--android:id="@+id/all_update_payment_methods_btn"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="right|center_vertical"-->
                <!--android:textAlignment="gravity"-->
                <!--android:text="@string/_payment_mehtods_update"/>-->

        </LinearLayout>


    </LinearLayout>

</ScrollView>